# BBDG-HWP-Editor

./: .gitignore  BBDG_CRITICAL_BRANCH_SNAPSHOT.md  CHANGELOG.md  CLAUDE.md  COMMIT_AGENT.md  CONTRIBUTING.md  Cargo.toml  EXPERIMENTAL_PRINT_PATH_REMOVAL_CHECKLIST.md  HWP_LINK_DROP_IMPLEMENTATION_PLAN.md  HWP_LINK_DROP_REQUIREMENTS.md  MEMORY_OPTIMIZATION_PLAN.md  PRINT_EXTRACTION_API_SPEC.md  PUPPETEER_PRINT_PIPELINE_PLAN.md  README.md  README_EN.md  RHWP_ENGINE_API_INVENTORY.md  RHWP_ENGINE_APPROVAL_GATE_AGENT.md  RHWP_ENGINE_APP_CONTROL_PHASE2_REPORT_20260423.md  RHWP_ENGINE_APP_CONTROL_REPORT_20260423.md  RHWP_ENGINE_APP_CONTROL_VERIFICATION_AGENT.md  RHWP_ENGINE_BASELINE_COMPARISON_AGENT.md  RHWP_ENGINE_COMPATIBILITY_CHECKLIST.md  RHWP_ENGINE_GUARDIAN_AGENT.md  RHWP_ENGINE_INTEGRATION_DEVELOPMENT_PLAN.md  RHWP_ENGINE_INTEGRATION_DEVELOPMENT_SPEC.md  RHWP_ENGINE_INTEGRATION_REQUIREMENTS.md  RHWP_ENGINE_MOMENTUM_MONITOR.md  RHWP_ENGINE_ORCHESTRATION_SUPERVISOR.md  RHWP_ENGINE_RAW_BYPASS_CANDIDATES.md  RHWP_ENGINE_UPDATE_PHASE2_REPORT_20260423.md  RHWP_ENGINE_UPDATE_REHEARSAL_20260423.md  RHWP_ENGINE_UPDATE_RUNBOOK.md  VERSION_AGENT.md  bundle.bat  commit.bat  index.html  performance_refactoring_log.md  push.bat  push_readme.bat  release_upload.bat  (+1 more)
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  release.yml
mydocs/feedback/: carret_tech.md  code-complexity-recommendations.md  code-refactoring-strategy.md  cqrs-analysis.md  dynamic_reflow.md  font-metrics.md  hwpx2ir.md  iso_safari_ime.md  layout-quality-report.md  post-refactoring-remaining-tasks.md  r-code-review-2nd.md  r-code-review-3rd-response.md  r-code-review-3rd.md  r-code-review-4th.md  r-code-review-5th.md  r-code-review-report.md  r-code-review.md  rhwp-studio-code-review.md  table_render.md  task_191_caption_lr.md  셀-나누기-01.md
mydocs/manual/: ai_pair_programming_guide.md  branding_strategy.md  browser_extension_dev_guide.md  dashboard.md  dev_environment_guide.md  dump_command.md  e2e_verification_guide.md  hyper_waterfall.md  hyper_waterfall_docs_guide.md  keyboard_shortcut_guide.md  local_web_server.md
mydocs/orders/: 20260205.md  20260207.md  20260208.md  20260209.md  20260210.md  20260211.md  20260212.md  20260213.md  20260214.md  20260215.md  20260216.md  20260217.md  20260218.md  20260219.md  20260220.md  20260221.md  20260222.md  20260223.md  20260224.md  20260225.md  20260226.md  20260227.md  20260228.md  20260302.md  20260303.md  20260305.md  20260306.md  20260307.md  20260308.md  20260310.md  20260311.md  20260312.md  20260313.md  20260314.md  20260315.md  20260316.md  20260317.md  20260318.md  20260319.md  20260320.md  (+20 more)
mydocs/plans/: rhwp_file_command_split_phase1.md  task_404.md
mydocs/tech/: browser_decompression_stream.md  canvas_rendering_analysis.md  dev_roadmap.md  dev_roadmap_v1_backup.md  direct_printing_guideline.md  equation_support_status.md  font_fallback_strategy.md  font_metrics_size_comparison.md  hancom_font_system_analysis.md  hexagonal_architecture_review.md  hwp_ctrl_data.md  hwp_errata_public_comparison.md  hwp_form_object_api.md  hwp_hwpx_ir_differences.md  hwp_save_guide.md  hwp_table_rendering.md  hwpers_analysis.md  hwpx_dvc_reference.md  hwpx_hancom_reference.md  layout_engine_research.md  partial_table_flow.md  project_vision.md  rendering_engine_design.md  return_cat.md  rhwp_validation_modal_future_improvements.md  single_pass_layout_design.md  table_layout_rules.md  text_layout_review.md  thorvg_decision.md  thorvg_poc_insights.md  webgian_replacement_strategy.md  webhwp_table_functions.md  webhwp_text_measurement.md  webhwp_vs_rhwp_parsing.md  한글문서파일형식_5.0_revision1.3.md
mydocs/troubleshootings/: bin_data_id_index_mapping.md  cell_split_save_corruption.md  claude_code_hyperfall_rule_conflict.md  column_def_proportional_widths.md  ios_safari_ime.md  line_spacing_lineseg_sync.md  multi_tac_table_pagination.md  page_margin_area_calculation.md  paragraph_indent_and_table_x_position.md  picture_save_hancom_compatibility.md  repeat_header_image_duplication.md  shape_fill_transparency.md  table_paste_file_corruption.md  (+7 more)
pkg/: rhwp.d.ts  rhwp.js  rhwp_bg.wasm  rhwp_bg.wasm.d.ts
rhwp-chrome/: content-script.js  dev-tools-inject.js
rhwp-studio/: index.html  package-lock.json  package.json
rhwp-vscode/: CHANGELOG.md  README.md  package.json
samples/: re-01-hangul-only-empty.hwp  re-01-hangul-only.hwp  re-02-space-count-empty.hwp  re-02-space-count.hwp  re-03-latin-only-empty.hwp  re-04-digit-only-empty.hwp  re-05-mixed-koen-empty.hwp  re-05-mixed-koen.hwp  re-06-punctuation-empty.hwp  re-align-center-empty.hwp  re-align-center.hwp  re-align-justify-empty.hwp  re-align-justify.hwp  re-align-left-empty.hwp  re-align-left.hwp  re-align-right-empty.hwp  re-align-right.hwp  re-eng-mixed-batang-arial-empty.hwp  re-eng-mixed-batang-arial.hwp  re-eng-mixed-batang-empty.hwp  re-eng-mixed-batang.hwp  re-eng-mixed-batangche-empty.hwp  re-eng-mixed-batangche.hwp  re-eng-mixed-dotum-empty.hwp  re-eng-mixed-dotum-times-empty.hwp  re-eng-mixed-dotum-times.hwp  re-eng-mixed-dotum.hwp  re-eng-mixed-malgun-courier-empty.hwp  re-eng-mixed-malgun-courier.hwp  re-eng-mixed-malgun-empty.hwp  re-eng-mixed-malgun-times-empty.hwp  re-eng-mixed-malgun.hwp  re-eng-nospace-batang-arial-empty.hwp  re-eng-nospace-batang-empty.hwp  re-eng-nospace-batang.hwp  re-eng-nospace-batangche-empty.hwp  re-eng-nospace-batangche.hwp  re-eng-nospace-dotum-empty.hwp  re-eng-nospace-dotum-times-empty.hwp  re-eng-nospace-dotum-times.hwp  (+43 more)
scripts/: prepare-npm.sh  print-worker.ts
src/: lib.rs  main.rs  print_module.rs  wasm_api.rs
src-tauri/: Cargo.toml  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  print_job.rs  print_worker.rs  remote_hwp.rs
tests/: hwpx_roundtrip_integration.rs
tools/: capture-rhwp-app-window.ps1  ensure-vite-dev-server.ps1  run-print-worker-smoke.ps1  version-agent.ps1
website/: index.html
(+593 files in other folders)
