[package]
name = "rhwp"
version = "0.7.31"
edition = "2021"
description = "HWP file viewer and editor written in Rust, targeting WebAssembly"
license = "MIT"
repository = "https://github.com/pureink-studio/rhwp"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rhwp"
path = "src/main.rs"

[[bin]]
name = "font-metric-gen"
path = "src/tools/font_metric_gen.rs"

[dependencies]
wasm-bindgen = "0.2"
cfb = "0.14"
flate2 = "1.0"
byteorder = "1.5"
base64 = "0.22"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
codepage = "0.1.2"
embedded-io = "0.7.1"
encoding_rs = "0.8.35"
paste = "1.0.15"
snafu = "0.9.0"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

# PDF ????????????嚥???癲?????쇨덫???(???????????????????⑤뜪?????????????????????썹땟戮녹??諭?????⑸㎦?? Task #21)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
svg2pdf = "0.13"
usvg = "0.45"
pdf-writer = "0.12"
subsetter = "0.2"
ttf-parser = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "CanvasPattern",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "TextMetrics",
    "Document",
    "Window",
    "console",
] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# ???? Clippy ?????????????????????됰Ŧ??????????????
# ?????????ロ깫????????????????????????熬곣뫖利당춯??쎾퐲?????????142) ???????????????????????썹땟戮녹??諭?????⑸㎦????allow ??warn ??deny ???????????????
#
# [Phase 0] ??????????????????????????????????????????ш끽維뽳쭩?뱀땡???얩맪??????????????????筌띯뫔????????????????????????????깅즽癲??
# [Phase 1-3] wasm_api/renderer ???????????????????????썹땟戮녹??諭?????⑸㎦???? too_many_arguments, cognitive_complexity ??warn
# [Phase 4-6] ?????????썹땟戮녹??諭?????⑸㎦?????????????????????????썹땟戮녹??諭?????⑸㎦???? ??????warn ?????deny
#
[lints.clippy]
# ???? ?????????????筌띯뫔????????? ?????????ロ깫????????????????????????????傭?끆??????????????????????????
too_many_arguments = "allow"        # Phase 1-3 ?????????썹땟戮녹??諭?????⑸㎦????warn
type_complexity = "allow"           # Phase 1-3 ?????????썹땟戮녹??諭?????⑸㎦????warn
cognitive_complexity = "allow"      # Phase 4 ?????????썹땟戮녹??諭?????⑸㎦????warn
needless_pass_by_value = "allow"    # Phase 4 ?????????썹땟戮녹??諭?????⑸㎦????warn
# ???? ???????ш끽維뽳쭩?뱀땡???얩맪????????? ?????????ロ깫??????????????????????????????????????곕츥????????????
redundant_closure = "allow"         # ????????????????????????????????곕츥????????
field_reassign_with_default = "allow"  # ????????????????????????????????곕츥????????
manual_div_ceil = "allow"           # ????????????????????????????????곕츥????????
manual_range_contains = "allow"     # ????????????????????????????????곕츥????????
unnecessary_cast = "allow"          # ????????????????????????????????곕츥????????
collapsible_if = "allow"            # ????????????????????????????????곕츥????????
unnecessary_map_or = "allow"         # ????????????????????????????????곕츥????????
needless_borrow = "allow"           # ????????????????????????????????곕츥????????
if_same_then_else = "allow"         # ????????????????????????????????곕츥????????
needless_range_loop = "allow"       # ????????????????????????????????곕츥????????
option_map_or_none = "allow"        # ????????????????????????????????곕츥????????
bool_comparison = "allow"           # ????????????????????????????????곕츥????????
collapsible_else_if = "allow"       # ????????????????????????????????곕츥????????
collapsible_match = "allow"         # ????????????????????????????????곕츥????????
needless_borrows_for_generic_args = "allow"
vec_init_then_push = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
useless_format = "allow"
derivable_impls = "allow"
redundant_pattern_matching = "allow"
iter_cloned_collect = "allow"
manual_clamp = "allow"
manual_saturating_arithmetic = "allow"
manual_rem_euclid = "allow"
manual_strip = "allow"
manual_is_ascii_check = "allow"
clone_on_copy = "allow"
explicit_into_iter_loop = "allow"
needless_lifetimes = "allow"
filter_map_identity = "allow"
ptr_arg = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
assign_op_pattern = "allow"
blocks_in_conditions = "allow"
enum_variant_names = "allow"
repeat_vec_with_capacity = "allow"
manual_repeat_n = "allow"
useless_conversion = "allow"
same_item_push = "allow"
nonminimal_bool = "allow"
implicit_saturating_sub = "allow"
unused_enumerate_index = "allow"
unnecessary_filter_map = "allow"
manual_pattern_char_comparison = "allow"
# ???? ?????????ш끽維뽳쭩?뱀땡???얩맪???????????????????饔낅떽???筌욊퀋????????筌띯뫔?????????? ??????거????????????????壤굿??껊㎜??遺얘턁????????筌롫㈇??????????????癲??????
large_enum_variant = "warn"

[lints.rust]
# dead_code, unused ???????????????????????ロ깫??????????????????????????????됰Ŧ????????????
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_macros = "allow"
# wmf ??????거??????????????거??????tracing feature cfg ?????筌띯뫔??????????????
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("tracing", "svg"))'] }















