[package]
name = "rhwp"
version = "0.7.53"
edition = "2021"
description = "HWP file viewer and editor written in Rust, targeting WebAssembly"
license = "MIT"
repository = "https://github.com/pureink-studio/rhwp"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rhwp"
path = "src/main.rs"

[[bin]]
name = "font-metric-gen"
path = "src/tools/font_metric_gen.rs"

[dependencies]
wasm-bindgen = "0.2"
cfb = "0.14"
flate2 = "1.0"
byteorder = "1.5"
base64 = "0.22"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
codepage = "0.1.2"
embedded-io = "0.7.1"
encoding_rs = "0.8.35"
paste = "1.0.15"
snafu = "0.9.0"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

# PDF ?????????????????????????????????(??????????????????????????????????????????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥????????????????????????????????????????????????????? Task #21)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
svg2pdf = "0.13"
usvg = "0.45"
pdf-writer = "0.12"
subsetter = "0.2"
ttf-parser = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "CanvasPattern",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "TextMetrics",
    "Document",
    "Window",
    "console",
] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# ???? Clippy ?????????????????????????????????????
# ???????????????????????????????????????????????????꾩룆梨띰쭕?뚢뵾??????????????嶺뚮죭?댁젘??????????????????????釉먮폁???????????????????살몝?????????????????????????????????????????????????????????????142) ???????????????????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥???????????????????????????????????????????????????????allow ??warn ??deny ???????????????
#
# [Phase 0] ????????????????????????????????????????????????????????袁⑸즴筌?씛彛???돗??????????????癲ル슢二??곸젞???????????????????????됰Ŧ?????????????????????대첐????????????????????????????????????????????????????????????????????????????????????????????????????????????⑤벡?????????됰Ŧ???????????꿔꺂????????????????????????????????????????????????
# [Phase 1-3] wasm_api/renderer ???????????????????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥??????????????????????????????????????????????????????? too_many_arguments, cognitive_complexity ??warn
# [Phase 4-6] ?????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥????????????????????????????????????????????????????????????????????????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥??????????????????????????????????????????????????????? ??????warn ?????deny
#
[lints.clippy]
# ???? ????????????????????????????????????????????????????⑤벡?????????됰Ŧ???????????꿔꺂?????????????? ?????????????????????????????????????????????????????????????????????
too_many_arguments = "allow"        # Phase 1-3 ?????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥???????????????????????????????????????????????????????warn
type_complexity = "allow"           # Phase 1-3 ?????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥???????????????????????????????????????????????????????warn
cognitive_complexity = "allow"      # Phase 4 ?????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥???????????????????????????????????????????????????????warn
needless_pass_by_value = "allow"    # Phase 4 ?????????????????????熬곣뫖利당춯??쎾퐲???????????????????꿔꺂?㏘틠??怨몄젦????????????????????????거??????????????????????泥???????????????????????????????????????????????????????warn
# ???? ?????????????????????袁⑸즴筌?씛彛???돗??????????????癲ル슢二??곸젞???????????????????????됰Ŧ?????????????????????대첐???????????????????????????????????????????????????????????? ???????????????????????????????????????????????????????????????????⑤벡?????????????????
redundant_closure = "allow"         # ?????????????????????????????????????????????????⑤벡?????????????
field_reassign_with_default = "allow"  # ?????????????????????????????????????????????????⑤벡?????????????
manual_div_ceil = "allow"           # ?????????????????????????????????????????????????⑤벡?????????????
manual_range_contains = "allow"     # ?????????????????????????????????????????????????⑤벡?????????????
unnecessary_cast = "allow"          # ?????????????????????????????????????????????????⑤벡?????????????
collapsible_if = "allow"            # ?????????????????????????????????????????????????⑤벡?????????????
unnecessary_map_or = "allow"         # ?????????????????????????????????????????????????⑤벡?????????????
needless_borrow = "allow"           # ?????????????????????????????????????????????????⑤벡?????????????
if_same_then_else = "allow"         # ?????????????????????????????????????????????????⑤벡?????????????
needless_range_loop = "allow"       # ?????????????????????????????????????????????????⑤벡?????????????
option_map_or_none = "allow"        # ?????????????????????????????????????????????????⑤벡?????????????
bool_comparison = "allow"           # ?????????????????????????????????????????????????⑤벡?????????????
collapsible_else_if = "allow"       # ?????????????????????????????????????????????????⑤벡?????????????
collapsible_match = "allow"         # ?????????????????????????????????????????????????⑤벡?????????????
needless_borrows_for_generic_args = "allow"
vec_init_then_push = "allow"
single_match = "allow"
match_like_matches_macro = "allow"
useless_format = "allow"
derivable_impls = "allow"
redundant_pattern_matching = "allow"
iter_cloned_collect = "allow"
manual_clamp = "allow"
manual_saturating_arithmetic = "allow"
manual_rem_euclid = "allow"
manual_strip = "allow"
manual_is_ascii_check = "allow"
clone_on_copy = "allow"
explicit_into_iter_loop = "allow"
needless_lifetimes = "allow"
filter_map_identity = "allow"
ptr_arg = "allow"
should_implement_trait = "allow"
new_without_default = "allow"
assign_op_pattern = "allow"
blocks_in_conditions = "allow"
enum_variant_names = "allow"
repeat_vec_with_capacity = "allow"
manual_repeat_n = "allow"
useless_conversion = "allow"
same_item_push = "allow"
nonminimal_bool = "allow"
implicit_saturating_sub = "allow"
unused_enumerate_index = "allow"
unnecessary_filter_map = "allow"
manual_pattern_char_comparison = "allow"
# ???? ???????????????????????袁⑸즴筌?씛彛???돗??????????????癲ル슢二??곸젞???????????????????????됰Ŧ?????????????????????대첐???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????⑤벡?????????됰Ŧ???????????꿔꺂??????????????? ???????????????????????????????????????????????????????????????????????????????????????????????????????
large_enum_variant = "warn"

[lints.rust]
# dead_code, unused ??????????????????????????????????????????????????????????????????????
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_macros = "allow"
# wmf ????????????????????????????tracing feature cfg ????????????????????????????????????????????⑤벡?????????됰Ŧ???????????꿔꺂???????????????????
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("tracing", "svg"))'] }















